java-8-ification of DAO code